# oak-example

different_cameras/: CMakeLists.txt  readme.md  utils.py  yolov6-left-spatial.py  yolov6-left.py  yolov6-rgb-spatial.py  yolov6-rgb.py  yolov6-right-spatial.py  yolov6-right.py  yolov6-video.py
different_cameras/cmake/: env.cmake
different_cameras/yolov6-left/: CMakeLists.txt  main.cpp
different_cameras/yolov6-left-spatial/: CMakeLists.txt  main.cpp
different_cameras/yolov6-rgb/: CMakeLists.txt  main.cpp
different_cameras/yolov6-rgb-spatial/: CMakeLists.txt  main.cpp
different_cameras/yolov6-right/: CMakeLists.txt  main.cpp
different_cameras/yolov6-right-spatial/: CMakeLists.txt  main.cpp
oak-ffc/: README.md  oak-ffc-4p-sync-ar0234.py  oak-ffc-4p-sync-ov9282.py  oak-ffc-4p-sync-ov9782.py  oak-ffc-4p.py  oak-ffc-depth.py  oak-ffc-save-png.py  oak-ffc-sync-ar0234.py  oak-ffc-sync-ov9*82.py  oak-ffc-sync-save-png.py  oak-ffc-sync-video-encoding.py  oak-ffc.py  requirements.txt  utils.py
rgb-sync-with-depth/: rgb-sync-with-depth.py
